--- a/css/styles.css
+++ b/css/styles.css
@@ -31,14 +31,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefcea', end
     grid-area: navavegacion;
 }
 .menu{
-    background-color: rgb(227, 230, 53);
+    background-color: rgba(255, 196, 0, 0.726);
     padding: 2%;
     text-align: center;
     font-family: 'Fira Sans Extra Condensed', sans-serif;
 }
 
 .menu li a:hover{
-    background-color: rgb(154, 221, 30);
+    background-color: rgb(219, 143, 44);
     border-radius: 80%;
 }
 
@@ -110,17 +110,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefcea', end
 
 }
 #aboutus{
-
-    margin-top: 2cm;
     width: 55% ;
-    margin-bottom: 2cm;
     font-size: 1.5rem;
     font-weight: bolder;
-    text-align: justify;
+    text-align: center;
 }
 #somos {
     width: fit-content;
-    background-color: rgb(225, 228, 41);
+    background-color: rgba(255, 196, 0, 0.726);
     margin: 10 auto;
     text-align: center;
 }
@@ -210,7 +207,7 @@ p{
 
 #titulo1{
     width: fit-content;
-    background-color: rgb(225, 228, 41);
+    background-color: rgba(255, 196, 0, 0.726);
     margin: 10 auto;
     text-align: center;
 }
@@ -220,13 +217,13 @@ p{
     border: solid black 2px;
     text-align: center;
     align-content: center;
-    background-color: rgb(225, 228, 41);
+    background-color: rgba(255, 196, 0, 0.726);
 }
 
 
 .serv{
     
-    background-color: rgb(225, 228, 41);
+    background-color: rgba(255, 196, 0, 0.726);
     margin: 10 auto;
     border: solid black 2px;
     text-align: center;
@@ -255,13 +252,13 @@ p{
 
 .titulos{
     margin: 1rem;
-    background-color: rgb(154, 221, 30);
+    background-color: rgb(219, 143, 44);
     text-align: center;
 }
 
 #titulo2{    
     width: fit-content;
-    background-color: rgb(225, 228, 41);
+    background-color: rgba(255, 196, 0, 0.726);
     margin: 10 auto;
     text-align: center;}
 
@@ -279,7 +276,7 @@ h4{
 
 #contactanos{
     width: fit-content;
-    background-color: rgb(225, 228, 41);
+    background-color: rgba(255, 196, 0, 0.726);
     margin: 10 auto;
     text-align: center;
 }
@@ -291,7 +288,7 @@ h4{
 }
 
 #formulario{
-    background-color: rgb(154, 221, 30); 
+    background-color: rgb(219, 143, 44); 
     padding: 0.8rem;
     font-family: 'Fira Sans Extra Condensed', sans-serif;    
     margin: 0.5cm;
@@ -307,7 +304,7 @@ h4{
 }
 
 @media screen and (max-width: 768px){
-    .conteiner{
+    .conteinerr{
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 2fr 1fr; 
